# premath

./: .envrc  .gitignore  .mise.toml  AGENTS.md  COMMITMENT.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  flake.nix  hk.pkl  justfile  pitchfork.toml  requirements.txt
.githooks/: pre-commit
.github/workflows/: baseline.yml  branch-policy.yml  instruction.yml
.premath/: OPERATIONS.md  SCRATCHSHEET.md  SESSION-HANDOFF.md  harness_session.json  issues.jsonl  site-change-log.jsonl
archive/premath-scratch/: KCIR-SELF-HOSTING-WORKSPACE.md  OPERATIONS.md  SCRATCHSHEET.md
artifacts/: README.md
bootstrap/: apply.py  site-apply-change.json  site-change-builder-ops.json
crates/premath-bd/: Cargo.toml
crates/premath-bd/src/: atomic_store.rs  claim_next.rs  dependency.rs  events.rs  issue.rs  issue_graph.rs  jsonl.rs  lib.rs  memory.rs  spec_ir.rs
crates/premath-cli/: Cargo.toml
crates/premath-cli/src/: cli.rs  main.rs  support.rs
crates/premath-cli/src/commands/: branch_policy_check.rs  capability_stub_invariance_check.rs  check.rs  ci_wiring_check.rs  command_surface_check.rs  control_plane_gate.rs  dep.rs  docs_coherence_check.rs  doctrine_inf_check.rs  doctrine_mcp_parity_check.rs  doctrine_site_check.rs  drift_budget_check.rs  evaluator_scaffold.rs  harness_feature.rs  harness_join_check.rs  harness_session.rs  harness_trajectory.rs  init.rs  instruction_batch_check.rs  instruction_check.rs  instruction_witness.rs  issue.rs  issue_graph_check.rs  issue_graph_compact.rs  mcp_serve.rs  mock_gate.rs  mod.rs  obligation_registry.rs  observation_semantics_check.rs  observe.rs  observe_build.rs  observe_serve.rs  pipeline_wiring_check.rs  proposal_check.rs  ref_binding.rs  repo_hygiene_check.rs  required_decision_verify.rs  required_witness_decide.rs  rhai_eval.rs  runtime_orchestration_check.rs  (+14 more)
crates/premath-cli/src/commands/check/: coherence.rs  coherence_check.rs  docs_coherence.rs  mod.rs
crates/premath-cli/src/commands/harness/: mod.rs  session.rs  trajectory.rs
crates/premath-cli/src/commands/issue_graph/: check.rs  compact.rs  compactness.rs  mod.rs
crates/premath-cli/src/commands/observe/: build.rs  mod.rs  query.rs  serve.rs
crates/premath-cli/src/commands/required/: delta.rs  gate_ref.rs  mod.rs  projection.rs  witness.rs  witness_verify.rs
crates/premath-cli/src/commands/world/: descent_contract_check.rs  gate_check.rs  mod.rs  registry_check.rs
crates/premath-cli/tests/: cli_smoke.rs
crates/premath-coherence/: Cargo.toml
crates/premath-coherence/src/: instruction.rs  lib.rs  proposal.rs  required.rs  required_decide.rs  required_decision_verify.rs  required_gate_ref.rs  required_projection.rs  required_verify.rs
crates/premath-doctrine/: Cargo.toml
crates/premath-jj/: Cargo.toml
crates/premath-jj/src/: lib.rs
crates/premath-kernel/: Cargo.toml
crates/premath-kernel/src/: coherence.rs  context.rs  cover.rs  definable.rs  descent.rs  error.rs  gate.rs  lib.rs  obligation_registry.rs  runtime_orchestration.rs  site_change.rs  site_resolve.rs  toy.rs  witness.rs  world_registry.rs
crates/premath-kernel/tests/: toy_vectors.rs
crates/premath-kernel/tests/fixtures/adversarial_glue_non_contractible_non_separated/: case.json
crates/premath-kernel/tests/fixtures/adversarial_stability_failure_bad_stability/: expect.json
crates/premath-kernel/tests/fixtures/golden_descent_sheaf_bits/: case.json
crates/premath-kernel/tests/fixtures/golden_descent_sheaf_bits_cocycle/: expect.json
crates/premath-observe/: Cargo.toml
crates/premath-observe/src/: lib.rs  trajectory.rs
crates/premath-observe/src/ux/: http.rs  mod.rs
crates/premath-surreal/: Cargo.toml
crates/premath-surreal/src/: lib.rs  observation.rs  trajectory.rs
crates/premath-transport/: Cargo.toml
crates/premath-transport/src/: dispatch.rs  fiber.rs  lease.rs  lib.rs  registry.rs  types.rs
crates/premath-tusk/: Cargo.toml
crates/premath-tusk/src/: descent.rs  eval.rs  identity.rs  lib.rs  mapping.rs  typestate.rs  witness.rs
crates/premath-ux/: Cargo.toml
crates/premath-ux/src/: http.rs  lib.rs
docs/: README.md
docs/design/: ARCHITECTURE-MAP.md  CI-CLOSURE.md  CI-PROVIDER-BINDINGS.md  CONTROL-PLANE-THREAT-MODEL.md  DEVELOPMENT-META-LOOP.md  EV-COHERENCE-OVERVIEW.md  EV-STAGE1-CHECKLIST.md  EV-STAGE3-EXECUTION-RUNBOOK.md  GLOSSARY.md  HIGHER-ORDER-CI-CD.md  ISSUE-GRAPH-CORE-CHECKING.md  LIFECYCLE-COHERENCE-FLOWS.md  MEMORY-LANES-CONTRACT.md  MULTITHREAD-LANE-SITE-ADJOINTS.md  RALPH-PLAYBOOK-PREMATH.md  README.md  SQUEAK-DESIGN.md  STEEL-REPL-DESCENT-CONTROL.md  TOOL-CALLING-HARNESS-TYPESTATE.md  TUSK-ARCHITECTURE.md  TUSK-DESCENT-PACKS.md  TUSK-DOMAIN-ADAPTERS.md  TUSK-HARNESS-CONTRACT.md  TUSK-HARNESS-FEATURE-LEDGER.md  TUSK-HARNESS-KPI-BENCHMARK.md  TUSK-HARNESS-MULTITHREAD-RUNBOOK.md  TUSK-HARNESS-RETRY-POLICY.md  TUSK-HARNESS-SESSION.md  TUSK-HARNESS-TRAJECTORY.md  TUSK-SIGPI.md  TUSK-WITNESSING.md
docs/foundations/: PREMATH-KERNEL.md  SIGPI_NOTES.md  SITE-AND-TORSOR-NOTES.md
docs/observation/: README.md  index.html
infra/terraform/: main.tf  terraform.tfvars.example
instructions/: 20260221T000000Z-bootstrap-gate.json  README.md
jsonl/: README.md
policies/control/: README.md  harness-retry-policy-v1.json
policies/instruction/: README.md  policy-ci-instruction-smoke-v1.json  policy-ci-v1.json  policy-test-v1.json
policies/ref/: sha256_detached_v1.json
specs/process/: GITHUB-BRANCH-POLICY.json  HARNESS-SPEC-PROMOTION-MAP.md  README.md  SCHEMA-LIFECYCLE-GOVERNANCE.md  TOPOLOGY-BUDGET.json  coss.md  decision-log.md
tests/conformance/: README.md
tests/toy/: README.md
tools/: proof_schemes.py  split_transport.py
tools/ci/: README.md  change_projection.py  check_branch_policy.py  check_ci_wiring.py  check_command_surface.py  check_drift_budget.py  check_instruction_envelope.py  check_issue_graph.py  check_observation_semantics.py  check_pipeline_wiring.py  check_repo_hygiene.py  compact_issue_graph.py  control_plane_contract.py  core_cli_client.py  decide_required.py  delta_snapshot.py  emit_gate_witness.py  gate_witness_envelope.py  (+60 more)
(+854 files in other folders)
