[package]
name = "premath-bd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Issue tracking layer: JSONL storage, issue types, dependency graph"

[dependencies]
premath-kernel = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
