[package]
name = "premath-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI interface for premath"

[[bin]]
name = "premath"
path = "src/main.rs"

[dependencies]
premath-kernel = { workspace = true }
premath-tusk = { workspace = true }
premath-bd = { workspace = true }
premath-jj = { workspace = true }
premath-surreal = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
