[package]
name = "premath-coherence"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Typed coherence-contract checker and witness surface for Premath"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
