[package]
name = "premath-jj"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JJ (Jujutsu) backend: versioning, branches, conflicts-as-values"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
# Optional integration placeholder (jj-lib intentionally not enabled yet).
