[package]
name = "premath-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = """
The Premath kernel: coherence, reindexing, and contractible descent.

Ontology-agnostic. Does not prescribe what definables are — only how
they must behave under reindexing and descent.
"""

[dependencies]
premath-doctrine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
