[package]
name = "premath-observe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Observation layer: query cache, UX composition, and observation surface"

[dependencies]
premath-bd = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
# Optional integration placeholder (surrealdb dependency intentionally not enabled yet).
