[package]
name = "premath-transport"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Transport adapters over canonical premath lease operation semantics"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
rustler_nif = ["dep:rustler"]

[dependencies]
premath-bd = { workspace = true }
premath-coherence = { workspace = true }
premath-kernel = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
rustler = { version = "0.36.1", optional = true }
