[package]
name = "premath-ux"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UX composition layer over observation/query adapters"

[dependencies]
premath-surreal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
